changes in sidebars main content

--- a/assets/INDEX.HTML
+++ b/assets/INDEX.HTML
@@ -1,150 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="logo.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="STYLE.CSS">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="icon" href="logo.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="STYLE.CSS" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Spotify</title>
-   
-</head>
-<body>
+  </head>
+  <body>
     <div class="main">
-<div class="sidebar">
-    <div class="nav">
-        <div class="nav-option" style="opacity: 1;">
+      <div class="sidebar">
+        <div class="nav">
+          <div class="nav-option">
             <i class="fa-solid fa-house"></i>
             <a href="#">Home</a>
+          </div>
+          <div class="nav-option">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <a href="#">Search</a>
+          </div>
         </div>
-        <div class="nav-option">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <a href="#">Search</a>
-    </div>
-</div>
-    <div class="library">
-        <div class="options">
+        <div class="library">
+          <div class="options">
             <div class="lib-option nav-option">
-                <img src="library_icon.png">
-                <a href="#">Your library</a>
-        </div>
-        <div class="icons">
-            <i class="fa-solid fa-plus"></i>
-            <i class="fa-solid fa-arrow-right"></i>
-        </div>
-    </div>
-        <div class="lib-box">
+              <img src="library_icon.png" />
+              <a href="#">Your library</a>
+            </div>
+            <div class="icons">
+              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="lib-box">
             <div class="box">
-                <div class="box-p1">Create your first playlist</div>
-                <div class="box-p2">It's easy we'll help you</div>
-                <button class="badge">Create playlist</button>
+              <div class="words-p1">Create your first playlist</div>
+              <div class="words-p2">It's easy we'll help you</div>
+              <button class="badge">Create playlist</button>
             </div>
             <div class="box">
-                <div class="box-p1">Find some podcast to follow</div>
-                <div class="box-p2">We'll keep you updated on new episodes you</div>
-                <button class="badge">browse podcast</button>
+              <div class="words-p1">Find some podcast to follow</div>
+              <div class="words-p2">
+                We'll keep you updated on new episodes you
+              </div>
+              <button class="badge">browse podcast</button>
             </div>
+            <table class="side_table">
+              <tr>
+                <td>Legal</td>
+                <td>Safety&PrivacyCenter</td>
+                <td>PrivacyPolicy</td>
+              </tr>
+              <tr>
+                <td>Cookie</td>
+                <td>AboutAds</td>
+                <td>Accessibilty</td>
+              </tr>
+              <tr>
+                <td>cookie</td>
+              </tr>
+            </table>
+          </div>
         </div>
-    </div>
-</div>
-<div class="main-content">
-<div class="sticky-nav">
-    <div class="sticky-nav-icons">
-        <img src="backward_icon.png">
-        <img src="forward_icon.png" class="hide">
-    </div>
-    <div class="sticky-nav-options">
-        <button class="badge nav-item hide">Explore Premium</button>
-    <button class="badge nav-item dark-badge"><i class="fa-solid fa-circle-arrow-down" style="margin-right: 5px;"></i>Install app</button>
-    <i class="fa-solid fa-user nav-item"></i>
-    </div>
-    
-</div>
-
-    <h2>Recently Played</h2>
-    <div class="cards-container">
-        <div class="card">
-            <img src="card1img.jpeg" class="card-img">
+      </div>
+      <div class="main-content">
+        <div class="nav_bar">
+          <div class="nav_icons">
+            <img src="backward_icon.png" />
+            <img src="forward_icon.png" class="hide"/>
+          </div>
+          <div class="nav_options">
+            <button class="badge nav-item hide">Explore Premium</button>
+            <button class="badge nav-item dark-badge">
+              <i
+                class="fa-solid fa-circle-arrow-down"
+                style="margin-right: 5px"></i>Install app
+            </button>
+            <i class="fa-solid fa-user nav-item"></i>
+          </div>
+        </div>
+        <h2>Recently Played</h2>
+        <div class="cards-container">
+          <div class="card">
+            <img src="card1img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
+          </div>
         </div>
-    </div>
-
-    <h2>Trending now near you</h2>
-    <div class="cards-container">
-        <div class="card">
-            <img src="card2img.jpeg" class="card-img">
+        <h2>Trending now near you</h2>
+        <div class="cards-container">
+          <div class="card">
+            <img src="card2img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
-        </div>
-        <div class="card">
-            <img src="card3img.jpeg" class="card-img">
+          </div>
+          <div class="card">
+            <img src="card3img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
-        </div>
-        <div class="card">
-            <img src="card4img.jpeg" class="card-img">
+          </div>
+          <div class="card">
+            <img src="card4img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
-        </div>
-        <div class="card">
-            <img src="card3img.jpeg" class="card-img">
+          </div>
+          <div class="card">
+            <img src="card3img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
-        </div>
-        <div class="card">
-            <img src="card4img.jpeg" class="card-img">
+          </div>
+          <div class="card">
+            <img src="card4img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
+          </div>
         </div>
-    </div>
-
-    <h2>Featured Charts</h2>
-    <div class="cards-container">
-        <div class="card">
-            <img src="card5img.jpeg" class="card-img">
+        <h2>Featured Charts</h2>
+        <div class="cards-container">
+          <div class="card">
+            <img src="card5img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
-        </div>
-        <div class="card">
-            <img src="card6img.jpeg" class="card-img">
+          </div>
+          <div class="card">
+            <img src="card6img.jpeg" class="card-img" />
             <p class="card-title">Top Songs - India</p>
             <p class="Card-Info">Your daily update of the most played...</p>
-        </div>
-        <div class="card">
-            <img src="card1img.jpeg" class="card-img">
+          </div>
+          <div class="card">
+            <img src="card1img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
+          </div>
         </div>
-    </div>
-    <div class="footer">
-        <div class="line"></div>
-    </div>
-</div>
-<div class="music-player">
-    <div class="album"></div>
-    <div class="player">
-        <div class="player-controls">
-            <img src="player_icon1.png" class="player-control-icon">
-            <img src="player_icon2.png" class="player-control-icon">
-            <img src="player_icon3.png" class="player-control-icon" style="opacity:1;" height="2rem">
-            <img src="player_icon4.png" class="player-control-icon">
-            <img src="player_icon5.png" class="player-control-icon">
+        <div class="footer">
+          <div class="line">
+             <table class="main_table">
+              <tr>
+                <th>Company</td>
+                <th>Communities</td>
+                <th>Useful links</td>
+                 <th>Spotify Plans</td>
+              </tr>
+              <tr>
+                <td>About</td>
+                <td>For Artists</td>
+                <td>Support</td>
+                  <td>Premium Lite</td>
+              </tr>
+              <tr>
+                <td>cookie</td>
+                <td>Jobs</td>
+                 <td>Developers</td>
+                  <td>Free Mobile App</td>
+              </tr>
+              <tr>
+                <td>Record</td>
+                 <td>Advertising</td>
+                  <td>Popular</td>
+                   <td>Premium Platinum</td>
+              </tr>
+            </table>
+          </div>
+          </div>
+          <div class="line"></div>
         </div>
-        <div class="playback-bar">
-            <span class="curr-time">00.00</div>
-                <input type="range" min="0" max="100" class="progress-bar" step="1">
-                <span class="tot-time">3.33</span>
-        </div>
-    </div>
-    <div class="controls"></div>
- </div>
-</div>
-<script src="script.js"></script>
-</body>
-
+      </div>>
+        <div class="player_controls">
+            <img src="player_icon1.png">
+            <img src="player_icon2.png">
+            <img src="player_icon3.png">
+            <img src="player_icon4.png">
+            <img src="player_icon5.png">
+            <div class="p_bar">
+               <span>00.00</span>
+             <input type="range" min="0" max="100"step="1">
+            <span>3.33</span> 
+            </div>
+             </div>
+  </body>
 </html>
