--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+ <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -18,7 +18,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-
     <title>Spotify</title>
   </head>
   <body>
@@ -37,7 +36,7 @@
         <div class="library">
           <div class="options">
             <div class="lib-option nav-option">
-              <img src="library_icon.png" />
+              <img src="/assts/library_icon.png" />
               <a href="#">Your library</a>
             </div>
             <div class="icons">
@@ -79,23 +78,24 @@
       <div class="main-content">
         <div class="nav_bar">
           <div class="nav_icons">
-            <img src="backward_icon.png" />
-            <img src="forward_icon.png" class="hide"/>
+            <img src="/assts/backward_icon.png" />
+            <img src="/assts/forward_icon.png" class="hide"/>
           </div>
           <div class="nav_options">
             <button class="badge nav-item hide">Explore Premium</button>
             <button class="badge nav-item dark-badge">
-              <i
-                class="fa-solid fa-circle-arrow-down"
+              <i class="fa-solid fa-circle-arrow-down"
                 style="margin-right: 5px"></i>Install app
-            </button>
-            <i class="fa-solid fa-user nav-item"></i>
-          </div>
+            </button> 
+             <i class="fa-solid fa-user nav-item"></i>
+             <button class="badge nav-item dark-badge">Sign up</button>
+             <button class="badge nav-item hide">Login</button>
+          </div>  
         </div>
         <h2>Recently Played</h2>
         <div class="cards-container">
           <div class="card">
-            <img src="card1img.jpeg" class="card-img" />
+            <img src="/assts/card1img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
@@ -103,27 +103,27 @@
         <h2>Trending now near you</h2>
         <div class="cards-container">
           <div class="card">
-            <img src="card2img.jpeg" class="card-img" />
+            <img src="/assts/card2img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
           <div class="card">
-            <img src="card3img.jpeg" class="card-img" />
+            <img src="/assts/card3img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
           <div class="card">
-            <img src="card4img.jpeg" class="card-img" />
+            <img src="/assts/card4img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
           <div class="card">
-            <img src="card3img.jpeg" class="card-img" />
+            <img src="/assts/card3img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
           <div class="card">
-            <img src="card4img.jpeg" class="card-img" />
+            <img src="/assts/card4img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
@@ -131,17 +131,17 @@
         <h2>Featured Charts</h2>
         <div class="cards-container">
           <div class="card">
-            <img src="card5img.jpeg" class="card-img" />
+            <img src="/assts/card5img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
           <div class="card">
-            <img src="card6img.jpeg" class="card-img" />
+            <img src="/assts/card6img.jpeg" class="card-img" />
             <p class="card-title">Top Songs - India</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
           <div class="card">
-            <img src="card1img.jpeg" class="card-img" />
+            <img src="/assts/card1img.jpeg" class="card-img" />
             <p class="card-title">Top 50 - Global</p>
             <p class="Card-Info">Your daily update of the most played...</p>
           </div>
@@ -178,18 +178,19 @@
           </div>
           <div class="line"></div>
         </div>
-      </div>>
+      </div>
         <div class="player_controls">
-            <img src="player_icon1.png">
-            <img src="player_icon2.png">
-            <img src="player_icon3.png">
-            <img src="player_icon4.png">
-            <img src="player_icon5.png">
+            <img src="/assts/player_icon1.png">
+            <img src="/assts/player_icon2.png">
+            <img src="/assts/player_icon3.png">
+            <img src="/assts/player_icon4.png">
+            <img src="/assts/player_icon5.png">
             <div class="p_bar">
                <span>00.00</span>
              <input type="range" min="0" max="100"step="1">
             <span>3.33</span> 
             </div>
              </div>
+             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
